# SmartTrack-Vision-Suite

./: README.md  files.gitignore  pyproject.toml  requirements.txt  stats.json  tree.txt  ~$README.md
assets/: detections.csv  metrics.csv  summary_run.csv
assets/demos/run_test/: detections.csv  summary_run.csv
configs/: Phase2_ByteTrack_Theory_YAML.docx  bytetrack.yaml  run.yaml
docs/: Analyze.docx  SmartTrack_Phase6_AnalyzeDetections_Detections_Explanation.docx  SmartTrack_pipeline_tracker_detailed.docx  Streamlit_dashboard.docx  Viz.docx  upload.docx
runs/run_20251129_164448/: detections.csv  metrics.csv  summary_run.csv
runs/run_20251129_171839/: metrics.csv
scripts/: measure_stats.py  test_load.py
src/smarttrack/: __init__.py  analyze_all.py
src/smarttrack.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/smarttrack_tracker/: pipeline_tracker.py
streamlit_app/: analyzer_wrapper.py  streamlit_dashboard.py  upload.py  viz.py
